eks-appmesh/v2-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v2
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v2
  template:
    metadata:
      annotations:
        appmesh.k8s.aws/egressIgnoredPorts: "22,3306,9092"
      labels:
        app: order
        version: v2
    spec:
      containers:
      - name: order
        image: 379951292773.dkr.ecr.ap-southeast-1.amazonaws.com/ecs-order:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: order-v2
  namespace: prod
  labels:
    app: order
    version: v2
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: order
    version: v2
---
