eks-appmesh/mesh-def.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    mesh: ecommerce
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: order
  namespace: prod
spec:
  awsName: order.prod.ecommerce.com
  provider:
    virtualRouter:
      virtualRouterRef:
        name: order-router
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
      version: v1
  template:
    metadata:
      labels:
        app: user
        version: v1
    spec:
      containers:
        - name: user
          image: "379951292773.dkr.ecr.ap-southeast-1.amazonaws.com/ecs-user:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v1
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      annotations:
        appmesh.k8s.aws/egressIgnoredPorts: "22,3306,9092"
      labels:
        app: order
        version: v1
    spec:
      containers:
      - name: order
        image: 379951292773.dkr.ecr.ap-southeast-1.amazonaws.com/ecs-order:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: prod
  labels:
    app: user
spec:
  ports:
  - port: 8002
    name: http
  selector:
    app: user
---
apiVersion: v1
kind: Service
metadata:
  name: order-v1
  namespace: prod
  labels:
    app: order
    version: v1
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: order
    version: v1
